; ModuleID = '/home/carl/AnghaBench/systemd/src/basic/extr_in-addr-util.c_in4_addr_default_subnet_mask.c'
source_filename = "/home/carl/AnghaBench/systemd/src/basic/extr_in-addr-util.c_in4_addr_default_subnet_mask.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.in_addr = type opaque

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @in4_addr_default_subnet_mask(%struct.in_addr* %0, %struct.in_addr* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.in_addr*, align 8
  %5 = alloca %struct.in_addr*, align 8
  %6 = alloca i8, align 1
  %7 = alloca i32, align 4
  store %struct.in_addr* %0, %struct.in_addr** %4, align 8
  store %struct.in_addr* %1, %struct.in_addr** %5, align 8
  %8 = load %struct.in_addr*, %struct.in_addr** %4, align 8
  %9 = call i32 @assert(%struct.in_addr* %8)
  %10 = load %struct.in_addr*, %struct.in_addr** %5, align 8
  %11 = call i32 @assert(%struct.in_addr* %10)
  %12 = load %struct.in_addr*, %struct.in_addr** %4, align 8
  %13 = call i32 @in4_addr_default_prefixlen(%struct.in_addr* %12, i8* %6)
  store i32 %13, i32* %7, align 4
  %14 = load i32, i32* %7, align 4
  %15 = icmp slt i32 %14, 0
  br i1 %15, label %16, label %18

16:                                               ; preds = %2
  %17 = load i32, i32* %7, align 4
  store i32 %17, i32* %3, align 4
  br label %22

18:                                               ; preds = %2
  %19 = load %struct.in_addr*, %struct.in_addr** %5, align 8
  %20 = load i8, i8* %6, align 1
  %21 = call i32 @in4_addr_prefixlen_to_netmask(%struct.in_addr* %19, i8 zeroext %20)
  store i32 0, i32* %3, align 4
  br label %22

22:                                               ; preds = %18, %16
  %23 = load i32, i32* %3, align 4
  ret i32 %23
}

declare dso_local i32 @assert(%struct.in_addr*) #1

declare dso_local i32 @in4_addr_default_prefixlen(%struct.in_addr*, i8*) #1

declare dso_local i32 @in4_addr_prefixlen_to_netmask(%struct.in_addr*, i8 zeroext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
